--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   isar: ^3.0.5
   isar_flutter_libs: ^3.0.5
   path_provider: ^2.0.11
+  flutter_platform_alert: ^0.3.0
   carousel_slider: ^4.2.1
 
   # The following adds the Cupertino Icons font to your application.
