--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   path_provider: ^2.0.11
   flutter_platform_alert: ^0.3.0
   carousel_slider: ^4.2.1
+  dio: ^4.0.6
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
