--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   flutter_platform_alert: ^0.3.0
   carousel_slider: ^4.2.1
   dio: ^4.0.6
+  json_annotation: ^4.7.0
+  flutter_draggable_gridview: ^0.0.7
+  drag_and_drop_lists: ^0.3.3
+
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -49,6 +54,9 @@ dev_dependencies:
     sdk: flutter
   isar_generator: ^3.0.5
   build_runner: ^2.3.3
+  json_serializable: ^6.5.4
+
+
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
