--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,10 +47,12 @@ dependencies:
 
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   dotted_border: ^2.0.0+3
+  font_awesome_flutter: ^10.3.0
 
 
 dev_dependencies:
