--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   drag_and_drop_lists: ^0.3.3
   dart_vlc: ^0.4.0
   flutter_screenutil: ^5.6.1
+  provider: ^6.0.5
+  url_launcher: ^6.1.9
+
+
 
 
 
