--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   dotted_border: ^2.0.0+3
   font_awesome_flutter: ^10.3.0
+  percent_indicator: ^4.2.2
+
 
 
 dev_dependencies:
