--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,16 @@ dependencies:
   flutter_screenutil: ^5.6.1
   provider: ^6.0.5
   url_launcher: ^6.1.9
+  scrollable_positioned_list: ^0.3.5
+  visibility_detector: ^0.3.3
+  bitsdojo_window: ^0.1.5
+  window_size:
+    git:
+      url: https://github.com/google/flutter-desktop-embedding.git
+      path: plugins/window_size
+#  window_manager: ^0.3.1
+
+
 
 
 
