--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   scrollable_positioned_list: ^0.3.5
   visibility_detector: ^0.3.3
   bitsdojo_window: ^0.1.5
+  connectivity_plus: ^3.0.3
+
   window_size:
     git:
       url: https://github.com/google/flutter-desktop-embedding.git
