--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,9 @@ dependencies:
   path_provider: ^2.0.12
   flutter_platform_alert: ^0.3.0
   carousel_slider: ^4.2.1
-  dio: ^4.0.6
+#  dio: ^4.0.6
+#  dio: ^5.0.3
+  dio: any
   json_annotation: ^4.7.0
   flutter_draggable_gridview: ^0.0.7
   drag_and_drop_lists: ^0.3.3
@@ -48,6 +50,8 @@ dependencies:
   visibility_detector: ^0.3.3
   bitsdojo_window: ^0.1.5
   connectivity_plus: ^3.0.3
+  flowder: ^0.2.0
+
 
   window_size:
     git:
