--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   visibility_detector: ^0.3.3
   bitsdojo_window: ^0.1.5
   archive: ^3.1.2
+  connectivity_plus: ^3.0.3
   window_size:
     git:
       url: https://github.com/google/flutter-desktop-embedding.git
