fixing merge issues

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,14 +56,6 @@ dependencies:
 #  window_manager: ^0.3.1
 
 
-
-
-
-
-
-
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -102,6 +94,16 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  fonts:
+    - family: RAG-Sans
+      fonts:
+        - asset: assets/fonts/RAG-Sans1.0-Black.ttf
+        - asset: assets/fonts/RAG-Sans1.0-ExtraLight.ttf
+        - asset: assets/fonts/RAG-Sans1.0-Regular.ttf
+        - asset: assets/fonts/RAG-Sans1.0-SemiBold.ttf
+
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
