--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,7 +89,7 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
+            VALUE "CompanyName", "GoApp" "\0"
             VALUE "FileDescription", "eshkolot_offline" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "eshkolot_offline" "\0"
