--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,8 @@ dependencies:
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
   path_provider: ^2.0.12
-  flutter_platform_alert: ^0.3.0
+  flutter_platform_alert: ^0.4.0
+  oktoast: ^3.3.1
   carousel_slider: ^4.2.1
   dio: ^5.1.1
   json_annotation: ^4.8.0
@@ -49,6 +50,8 @@ dependencies:
   bitsdojo_window: ^0.1.5
   archive: ^3.1.2
   connectivity_plus: ^3.0.3
+  flutter_widget_from_html_core: ^0.10.1
+
   window_size:
     git:
       url: https://github.com/google/flutter-desktop-embedding.git
