--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,8 +49,10 @@ dependencies:
   visibility_detector: ^0.3.3
   bitsdojo_window: ^0.1.5
   archive: ^3.1.2
-  connectivity_plus: ^3.0.3
+  connectivity_plus: ^4.0.1
   flutter_widget_from_html_core: ^0.10.1
+  flutter_html: ^3.0.0-alpha.3
+
 
   window_size:
     git:
