--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   connectivity_plus: ^4.0.1
   flutter_widget_from_html_core: ^0.10.1
   flutter_html: ^3.0.0-alpha.3
+  audioplayers: ^4.1.0
+
 
 
   window_size:
