--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   flutter_widget_from_html_core: ^0.10.1
   flutter_html: ^3.0.0-alpha.3
   audioplayers: ^4.1.0
+  flutter_svg: ^2.0.7
+
 
 
 
