--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,9 +51,13 @@ dependencies:
   archive: ^3.1.2
   connectivity_plus: ^4.0.1
   flutter_widget_from_html_core: ^0.10.1
-  flutter_html: ^3.0.0-alpha.3
+#  flutter_html: ^3.0.0-alpha.3
   audioplayers: ^4.1.0
   flutter_svg: ^2.0.7
+  html: ^0.15.4
+  event_bus: ^2.0.0
+
+
 
 
 
