--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   flutter_svg: ^2.0.7
   html: ^0.15.4
   event_bus: ^2.0.0
+  syncfusion_flutter_pdfviewer: 21.2.3
+
 
 
 
@@ -77,7 +79,6 @@ dependencies:
   dotted_border: ^2.0.0+3
   font_awesome_flutter: ^10.3.0
   percent_indicator: ^4.2.2
-  f_logs: ^2.0.1
   permission_handler: ^10.2.0
   sentry_flutter: ^7.5.1
   sentry_dio: ^7.5.1
