--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,8 @@ dependencies:
   scrollable_positioned_list: ^0.3.5
   visibility_detector: ^0.3.3
   bitsdojo_window: ^0.1.5
-  archive: ^3.1.2
+  archive: ^3.4.9
+  tar: ^1.0.2
   connectivity_plus: ^4.0.1
   flutter_widget_from_html_core: ^0.10.1
 #  flutter_html: ^3.0.0-alpha.3
