--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   media_kit_video: ^1.2.4
   media_kit: ^1.1.10
   media_kit_libs_video: ^1.0.4
-  flutter_screenutil: ^5.9.1
+  flutter_screenutil: ^5.9.3
   provider: ^6.1.2
   url_launcher: ^6.2.6
   scrollable_positioned_list: ^0.3.8
@@ -61,6 +61,7 @@ dependencies:
   html: ^0.15.4
   event_bus: ^2.0.0
   syncfusion_flutter_pdfviewer: ^23.1.39
+#  window_manager: ^0.4.3
 
 
   window_size:
