--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   flutter_draggable_gridview: ^0.0.12
   drag_and_drop_lists: ^0.3.3
 #  dart_vlc: ^0.4.0
-  media_kit_video: ^1.2.4
+  media_kit_video: ^1.3.0
   media_kit: ^1.1.10
   media_kit_libs_video: ^1.0.4
   flutter_screenutil: ^5.9.3
@@ -60,8 +60,10 @@ dependencies:
   flutter_svg: ^2.0.10+1
   html: ^0.15.4
   event_bus: ^2.0.0
-  syncfusion_flutter_pdfviewer: ^23.1.39
+  syncfusion_flutter_pdfviewer: ^30.1.41
 #  window_manager: ^0.4.3
+  msix: ^3.16.10
+
 
 
   window_size:
@@ -86,26 +88,26 @@ dependencies:
 #  sentry_logging: ^7.5.1
   shared_preferences: ^2.2.3
 
-#msix_config:
-#  display_name: Eshkolot Offline
-#  publisher_display_name: Go App
-#  app_installer: #<-- app installer configuration
-#    publish_folder_path: C:\Users\USER\GoAppProjects\eshkolot_offline\myPublishFolder
-##    hours_between_update_checks: 0
-##    automatic_background_task: true
-##    update_blocks_activation: true
-##    show_prompt: true
-##    force_update_from_any_version: false
-#  msix_version: 1.0.0.0
-#  identity_name: go.app.eshkolot
-#  logo_path: C:\Users\USER\GoAppProjects\eshkolot_offline\icon.ico
+msix_config:
+  display_name: Eshkolot Offline
+  publisher_display_name: Go App
+  app_installer: #<-- app installer configuration
+    publish_folder_path: C:\Users\USER\GoAppProjects\eshkolot_offline\myPublishFolder
+#    hours_between_update_checks: 0
+#    automatic_background_task: true
+#    update_blocks_activation: true
+#    show_prompt: true
+#    force_update_from_any_version: false
+  msix_version: 1.0.0.0
+  identity_name: go.app.eshkolot
+  logo_path: C:\Users\USER\AndroidStudioProjects\eshkolot_offline\windows\runner\resources\app_icon.ico
 #  certificate_path: C:\Program Files\OpenSSL-Win64\bin\mycrtname.pfx
-#  certificate_password: 1234
-#
-#  #  install_certificate: false
-#
-#  #  logo_path: C:\path\to\logo.png
-#  #  capabilities: internetClient, location, microphone, webcam
+  certificate_password: 1234
+
+  #  install_certificate: false
+
+  #  logo_path: C:\path\to\logo.png
+  #  capabilities: internetClient, location, microphone, webcam
 
 
 dev_dependencies:
