fix more problems, add text to lesson,fix html display problem and a lot more...

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,10 +54,10 @@ dependencies:
   archive: ^3.6.0
   tar: ^1.0.5
   connectivity_plus: ^6.0.3
-  flutter_widget_from_html_core: ^0.15.2
+  flutter_widget_from_html_core: ^0.17.0
 #  flutter_html: ^3.0.0-alpha.3
   audioplayers: ^6.5.0
-  flutter_svg: ^2.0.10+1
+  flutter_svg: ^2.2.3
   html: ^0.15.4
   event_bus: ^2.0.0
   syncfusion_flutter_pdfviewer: ^30.1.41
